Change the decimal point places from 7 to 4. Add new validation to the amount before sending the transaction in order that the user will not be able to send an amount that have more than 4 places after the decimal point. As a result had to change many of the tests in the kin-base and in the kin-sdk and also add some new tests.

--- a/sample/src/main/res/layout/payment_info.xml
+++ b/sample/src/main/res/layout/payment_info.xml
@@ -83,7 +83,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:layout_marginLeft="5dp"
-            tools:text="922337203685.4775807"/>
+            tools:text="922337203685.4775"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
