--- a/sample/src/main/res/layout/choose_network_activity.xml
+++ b/sample/src/main/res/layout/choose_network_activity.xml
@@ -6,7 +6,7 @@
     android:padding="@dimen/activity_padding"
     android:background="@color/white"
     android:orientation="vertical"
-    tools:context="kin.sdk.core.sample.kin.core.sample.ChooseNetworkActivity">
+    tools:context="kin.sdk.sample.ChooseNetworkActivity">
 
     <View
         android:layout_width="match_parent"
