Fix all issue raised from code review. Still can't run integration tests. Didn't changed fee from int to long in the stellar sdk part, need to talk about it

--- a/sample/src/main/res/layout/wallet_activity.xml
+++ b/sample/src/main/res/layout/wallet_activity.xml
@@ -127,7 +127,7 @@
                 android:layout_marginTop="@dimen/sub_text_margin"
                 android:layout_below="@id/get_status_text"
                 android:gravity="left"
-                tools:text="ACTIVATED"/>
+                tools:text="CREATED"/>
         </RelativeLayout>
 
         <View
