1. Change project structure in order to create folder for each module. In this commit we added the recovery-sample to the kin-recovery Later we will also add all the code for that sample module.

--- a/kin-sdk/sample/src/main/res/layout/create_wallet_activity.xml
+++ b/kin-sdk/sample/src/main/res/layout/create_wallet_activity.xml
@@ -6,7 +6,7 @@
     android:padding="@dimen/activity_padding"
     android:background="@color/white"
     android:orientation="vertical"
-    tools:context="kin.sdk.sample.CreateWalletActivity">
+    tools:context="sdk.sample.CreateWalletActivity">
 
     <View
         android:layout_width="match_parent"
