--- a/kin-sdk/sample/src/main/res/layout/export_key_store_activity.xml
+++ b/kin-sdk/sample/src/main/res/layout/export_key_store_activity.xml
@@ -8,7 +8,7 @@
     android:clickable="true"
     android:focusableInTouchMode="true"
     android:orientation="vertical"
-    tools:context="kin.sdk.sample.ExportKeystoreActivity">
+    tools:context="sdk.sample.ExportKeystoreActivity">
 
 
     <EditText
