--- a/kin-sdk/sample/src/main/res/layout/web_holder_activity.xml
+++ b/kin-sdk/sample/src/main/res/layout/web_holder_activity.xml
@@ -4,6 +4,6 @@
     android:id="@+id/web"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="kin.sdk.sample.WebWrapperActivity">
+    tools:context="sdk.sample.WebWrapperActivity">
 
 </WebView>
