--- a/kin-sdk/sample/src/main/res/layout/wallet_activity.xml
+++ b/kin-sdk/sample/src/main/res/layout/wallet_activity.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:fillViewport="true"
-    tools:context="kin.sdk.sample.WalletActivity"
+    tools:context="sdk.sample.WalletActivity"
     >
 
     <LinearLayout
