--- a/kin-recovery/recovery-sample/src/main/res/layout/activity_backup_and_restore.xml
+++ b/kin-recovery/recovery-sample/src/main/res/layout/activity_backup_and_restore.xml
@@ -1,10 +1,127 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginLeft="30dp"
+    android:layout_marginRight="30dp"
     tools:context=".BackupAndRestoreActivity">
+
+    <TextView
+        android:id="@+id/current_account_details_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/current_account_details_label"
+        android:textSize="26sp"
+        android:textStyle="bold"
+        android:layout_marginTop="50dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <TextView
+        android:id="@+id/balance_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/balance_label"
+        android:textSize="22sp"
+        android:textStyle="bold"
+        android:layout_marginTop="30dp"
+        app:layout_constraintTop_toBottomOf="@+id/current_account_details_label"
+        app:layout_constraintLeft_toLeftOf="parent"/>
+
+    <TextView
+        android:id="@+id/balance_value"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="1000 KIN"
+        android:textSize="22sp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="30dp"
+        app:layout_constraintTop_toBottomOf="@+id/current_account_details_label"
+        app:layout_constraintLeft_toRightOf="@+id/balance_label"/>
+
+    <TextView
+        android:id="@+id/public_address_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/public_address_label"
+        android:textSize="22sp"
+        android:textStyle="bold"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/balance_label"
+        app:layout_constraintLeft_toLeftOf="parent"/>
+
+    <TextView
+        android:id="@+id/public_address_value"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="ABCDEFGHIJKLMNOPQRSTUVWXYZ"
+        android:textSize="22sp"
+        android:layout_marginTop="5dp"
+        app:layout_constraintTop_toBottomOf="@+id/public_address_label"
+        app:layout_constraintLeft_toLeftOf="parent"/>
+
+    <Button
+        android:id="@+id/create_new_account"
+        style="@style/RecoveryButtonStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="22sp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/public_address_value"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/backup_current_account"
+        app:layout_constraintVertical_chainStyle="packed"
+        android:text="@string/create_new_account"/>
+
+    <Button
+        android:id="@+id/backup_current_account"
+        style="@style/RecoveryButtonStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="22sp"
+        android:layout_marginTop="40dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/create_new_account"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/recover_account"
+        app:layout_constraintVertical_chainStyle="packed"
+        android:text="@string/backup_current_account"/>
+
+    <Button
+        android:id="@+id/recover_account"
+        style="@style/RecoveryButtonStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="22sp"
+        android:layout_marginTop="40dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/backup_current_account"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_chainStyle="packed"
+        android:text="@string/recover_account"/>
+
+
+    <!--<ProgressBar-->
+    <!--android:id="@+id/balance_progress"-->
+    <!--android:layout_width="@dimen/progress_size"-->
+    <!--android:layout_height="@dimen/progress_size"-->
+    <!--android:visibility="gone"-->
+    <!--tools:visibility="visible"-->
+    <!--android:layout_marginLeft="10dp"-->
+    <!--app:layout_constraintStart_toEndOf="@id/restored_account_balance_title"-->
+    <!--app:layout_constraintTop_toTopOf="@+id/restored_account_balance_title"-->
+    <!--app:layout_constraintBottom_toBottomOf="@+id/restored_account_balance_title"/>-->
 
 
 </android.support.constraint.ConstraintLayout>
