--- a/kin-recovery/recovery-sample/src/main/res/values/colors.xml
+++ b/kin-recovery/recovery-sample/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">@color/kinBlue</color>
+    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorAccent">#FF4081</color>
+
+    <color name="kinBlueSelected">#1392C9</color>
+    <color name="kinBlue">#26BEFF</color>
+    <color name="disable">#D1D1D1</color>
 </resources>
