--- a/kin-recovery/recovery-sample/src/main/res/values/styles.xml
+++ b/kin-recovery/recovery-sample/src/main/res/values/styles.xml
@@ -1,11 +1,17 @@
 <resources>
 
-    <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">@color/kinBlue</item>
+        <item name="colorPrimaryDark">@color/kinBlueSelected</item>
+        <item name="colorAccent">@color/kinBlue</item>
+    </style>
+
+    <style name="RecoveryButtonStyle" parent="Widget.AppCompat.Button">
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:background">@drawable/recovery_button_bg</item>
     </style>
 
 </resources>
