--- a/kin-recovery/recovery-sample/src/main/res/layout/activity_backup_and_restore.xml
+++ b/kin-recovery/recovery-sample/src/main/res/layout/activity_backup_and_restore.xml
@@ -51,7 +51,7 @@
         android:textSize="22sp"
         android:textStyle="bold"
         android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/balance_label"
+        app:layout_constraintTop_toBottomOf="@+id/balance_value"
         app:layout_constraintLeft_toLeftOf="parent"/>
 
     <TextView
