--- a/kin-recovery/recovery-sample/src/main/res/layout/activity_backup_and_restore.xml
+++ b/kin-recovery/recovery-sample/src/main/res/layout/activity_backup_and_restore.xml
@@ -34,14 +34,24 @@
 
     <TextView
         android:id="@+id/balance_value"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         tools:text="1000 KIN"
         android:textSize="22sp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="30dp"
-        app:layout_constraintTop_toBottomOf="@+id/current_account_details_label"
-        app:layout_constraintLeft_toRightOf="@+id/balance_label"/>
+        android:layout_marginTop="5dp"
+        app:layout_constraintTop_toBottomOf="@+id/balance_label"
+        app:layout_constraintLeft_toLeftOf="parent"/>
+
+    <ProgressBar
+        android:id="@+id/balance_value_progress"
+        android:layout_width="@dimen/progress_size"
+        android:layout_height="@dimen/progress_size"
+        app:layout_constraintLeft_toRightOf="@+id/balance_label"
+        app:layout_constraintTop_toTopOf="@+id/balance_label"
+        app:layout_constraintBottom_toBottomOf="@+id/balance_label"
+        android:layout_marginLeft="10dp"
+        android:visibility="gone"
+        tools:visibility="visible"/>
 
     <TextView
         android:id="@+id/public_address_label"
@@ -63,6 +73,17 @@
         android:layout_marginTop="5dp"
         app:layout_constraintTop_toBottomOf="@+id/public_address_label"
         app:layout_constraintLeft_toLeftOf="parent"/>
+
+    <ProgressBar
+        android:id="@+id/public_address_value_progress"
+        android:layout_width="@dimen/progress_size"
+        android:layout_height="@dimen/progress_size"
+        app:layout_constraintLeft_toRightOf="@+id/public_address_label"
+        app:layout_constraintTop_toTopOf="@+id/public_address_label"
+        app:layout_constraintBottom_toBottomOf="@+id/public_address_label"
+        android:layout_marginLeft="10dp"
+        android:visibility="gone"
+        tools:visibility="visible"/>
 
     <Button
         android:id="@+id/create_new_account"
@@ -110,18 +131,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintVertical_chainStyle="packed"
         android:text="@string/recover_account"/>
-
-
-    <!--<ProgressBar-->
-    <!--android:id="@+id/balance_progress"-->
-    <!--android:layout_width="@dimen/progress_size"-->
-    <!--android:layout_height="@dimen/progress_size"-->
-    <!--android:visibility="gone"-->
-    <!--tools:visibility="visible"-->
-    <!--android:layout_marginLeft="10dp"-->
-    <!--app:layout_constraintStart_toEndOf="@id/restored_account_balance_title"-->
-    <!--app:layout_constraintTop_toTopOf="@+id/restored_account_balance_title"-->
-    <!--app:layout_constraintBottom_toBottomOf="@+id/restored_account_balance_title"/>-->
-
 
 </android.support.constraint.ConstraintLayout>
