--- a/kin-backup-and-restore/kin-backup-and-restore-sample/src/main/res/layout/activity_backup_and_restore.xml
+++ b/kin-backup-and-restore/kin-backup-and-restore-sample/src/main/res/layout/activity_backup_and_restore.xml
@@ -87,7 +87,7 @@
 
     <Button
         android:id="@+id/create_new_account"
-        style="@style/RecoveryButtonStyle"
+        style="@style/BackupAndRestoreButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="22sp"
@@ -102,7 +102,7 @@
 
     <Button
         android:id="@+id/backup_current_account"
-        style="@style/RecoveryButtonStyle"
+        style="@style/BackupAndRestoreButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="22sp"
@@ -112,13 +112,13 @@
         app:layout_constraintTop_toBottomOf="@+id/create_new_account"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/recover_account"
+        app:layout_constraintBottom_toTopOf="@+id/restore_account"
         app:layout_constraintVertical_chainStyle="packed"
         android:text="@string/backup_current_account"/>
 
     <Button
-        android:id="@+id/recover_account"
-        style="@style/RecoveryButtonStyle"
+        android:id="@+id/restore_account"
+        style="@style/BackupAndRestoreButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="22sp"
@@ -130,6 +130,6 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintVertical_chainStyle="packed"
-        android:text="@string/recover_account"/>
+        android:text="@string/restore_account"/>
 
 </android.support.constraint.ConstraintLayout>
