Fixed the Create Password description text

--- a/kin-backup-and-restore/kin-backup-and-restore/src/main/res/layout/backup_and_restore_fragment_backup_create_password.xml
+++ b/kin-backup-and-restore/kin-backup-and-restore/src/main/res/layout/backup_and_restore_fragment_backup_create_password.xml
@@ -8,17 +8,31 @@
     android:background="@android:color/white">
 
     <TextView
-        android:id="@+id/password_description"
+        android:id="@+id/password_description_part_a"
         style="@style/BackupAndRestoreTitleSmall"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:gravity="center_horizontal"
         android:lineSpacingExtra="@dimen/backupAndRestore_line_spacing_large"
-        android:text="@string/backup_and_restore_create_password_description"
+        android:text="@string/backup_and_restore_create_password_description_part_a"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
+
+    <TextView
+        android:id="@+id/password_description_part_b"
+        style="@style/BackupAndRestoreTitleSmall"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="9dp"
+        android:gravity="center_horizontal"
+        android:textColor="@color/backupAndRestore_gray"
+        android:lineSpacingExtra="@dimen/backupAndRestore_line_spacing_large"
+        android:text="@string/backup_and_restore_create_password_description_part_b"
+        app:layout_constraintTop_toBottomOf="@id/password_description_part_a"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
 
     <kin.backupandrestore.widget.PasswordEditText
         android:id="@+id/enter_pass_edittext"
@@ -29,7 +43,7 @@
         app:backup_and_restore_show_reveal_icon="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/password_description"/>
+        app:layout_constraintTop_toBottomOf="@id/password_description_part_b"/>
 
     <kin.backupandrestore.widget.PasswordEditText
         android:id="@+id/confirm_pass_edittext"
