--- a/kin-backup-and-restore/kin-backup-and-restore/src/main/res/layout/backup_and_restore_fragment_backup_info.xml
+++ b/kin-backup-and-restore/kin-backup-and-restore/src/main/res/layout/backup_and_restore_fragment_backup_info.xml
@@ -4,16 +4,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingRight="@dimen/backupAndRestore_screen_left_right_padding"
-    android:paddingLeft="@dimen/backupAndRestore_screen_left_right_padding"
+    android:paddingRight="@dimen/backup_and_restore_screen_left_right_padding"
+    android:paddingLeft="@dimen/backup_and_restore_screen_left_right_padding"
     android:background="@android:color/white">
 
     <ImageView
         android:id="@+id/safe_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/backupAndRestore_margin_large"
-        android:src="@drawable/safe"
+        android:layout_marginTop="@dimen/backup_and_restore_margin_large"
+        app:srcCompat="@drawable/safe"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
@@ -23,7 +23,7 @@
         style="@style/BackupAndRestoreTitleLargeBold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/backupAndRestore_margin_large"
+        android:layout_marginTop="@dimen/backup_and_restore_margin_large"
         android:text="@string/backup_and_restore_keep_your_kin_safe"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,12 +33,12 @@
         android:id="@+id/description"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/backupAndRestore_margin_small"
-        android:layout_marginLeft="@dimen/backupAndRestore_margin_medium"
-        android:layout_marginRight="@dimen/backupAndRestore_margin_medium"
+        android:layout_marginTop="@dimen/backup_and_restore_margin_small"
+        android:layout_marginLeft="@dimen/backup_and_restore_margin_medium"
+        android:layout_marginRight="@dimen/backup_and_restore_margin_medium"
         android:gravity="center_horizontal"
         style="@style/BackupAndRestoreTitle"
-        android:lineSpacingExtra="@dimen/backupAndRestore_line_spacing_large"
+        android:lineSpacingExtra="@dimen/backup_and_restore_line_spacing_large"
         android:text="@string/backup_and_restore_backup_description"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -48,8 +48,8 @@
         android:id="@+id/lets_go_button"
         style="@style/BackupAndRestoreButton"
         android:layout_width="0dp"
-        android:layout_height="@dimen/backupAndRestore_btn_height"
-        android:layout_marginBottom="@dimen/backupAndRestore_btn_margin_bottom"
+        android:layout_height="@dimen/backup_and_restore_btn_height"
+        android:layout_marginBottom="@dimen/backup_and_restore_btn_margin_bottom"
         android:text="@string/backup_and_restore_lets_go"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
