--- a/kin-backup-and-restore/kin-backup-and-restore/src/main/res/layout/backup_and_restore_fragment_password_restore.xml
+++ b/kin-backup-and-restore/kin-backup-and-restore/src/main/res/layout/backup_and_restore_fragment_password_restore.xml
@@ -3,15 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingRight="@dimen/backupAndRestore_screen_left_right_padding"
-    android:paddingLeft="@dimen/backupAndRestore_screen_left_right_padding"
+    android:paddingRight="@dimen/backup_and_restore_screen_left_right_padding"
+    android:paddingLeft="@dimen/backup_and_restore_screen_left_right_padding"
     android:background="@android:color/white">
 
     <ImageView
         android:id="@+id/kinrecovery_password_qr_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/backupAndRestore_margin_large"
+        android:layout_marginTop="@dimen/backup_and_restore_margin_large"
         android:src="@drawable/backup_and_restore_password_recovery_qr_code_icon"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,7 +20,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/purple_blue_v_mark"
+        app:srcCompat="@drawable/purple_blue_v_mark"
         android:translationX="10dp"
         android:translationY="10dp"
         app:layout_constraintBottom_toBottomOf="@id/kinrecovery_password_qr_icon"
@@ -43,8 +43,8 @@
     <kin.backupandrestore.widget.PasswordEditText
         android:id="@+id/kinrecovery_password_edit"
         android:layout_width="0dp"
-        android:layout_height="@dimen/backupAndRestore_edittext_height"
-        android:layout_marginTop="@dimen/backupAndRestore_margin_large"
+        android:layout_height="@dimen/backup_and_restore_edittext_height"
+        android:layout_marginTop="@dimen/backup_and_restore_margin_large"
         app:backup_and_restore_hint="@string/backup_and_restore_enter_password"
         app:backup_and_restore_show_reveal_icon="true"
         app:layout_constraintTop_toBottomOf="@id/kinrecovery_password_recovery_text"
@@ -55,8 +55,8 @@
         android:id="@+id/kinrecovery_password_recovery_btn"
         style="@style/BackupAndRestoreButton"
         android:layout_width="0dp"
-        android:layout_height="@dimen/backupAndRestore_btn_height"
-        android:layout_marginBottom="@dimen/backupAndRestore_btn_margin_bottom"
+        android:layout_height="@dimen/backup_and_restore_btn_height"
+        android:layout_marginBottom="@dimen/backup_and_restore_btn_margin_bottom"
         android:background="@drawable/backup_and_restore_btn_state_list"
         android:text="@string/backup_and_restore_done"
         app:layout_constraintBottom_toBottomOf="parent"
