--- a/kin-backup-and-restore/kin-backup-and-restore/src/main/res/layout/backup_and_restore_fragment_restore_completed.xml
+++ b/kin-backup-and-restore/kin-backup-and-restore/src/main/res/layout/backup_and_restore_fragment_restore_completed.xml
@@ -9,7 +9,7 @@
         android:id="@+id/kinrecovery_password_qr_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/backupAndRestore_margin_large"
+        android:layout_marginTop="@dimen/backup_and_restore_margin_large"
         android:src="@drawable/backup_and_restore_password_recovery_qr_code_icon"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -18,7 +18,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/purple_blue_v_mark"
+        app:srcCompat="@drawable/purple_blue_v_mark"
         android:translationX="10dp"
         android:translationY="10dp"
         app:layout_constraintBottom_toBottomOf="@id/kinrecovery_password_qr_icon"
@@ -41,7 +41,7 @@
         android:id="@+id/backup_and_restore_v_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/backupAndRestore_margin_extra_large"
+        android:layout_marginTop="@dimen/backup_and_restore_margin_extra_large"
         android:background="@drawable/circle_v_mark_icon"
         app:layout_constraintTop_toBottomOf="@+id/kinrecovery_password_recovery_text"
         app:layout_constraintEnd_toEndOf="parent"
