--- a/kin-backup-and-restore/kin-backup-and-restore/src/main/res/layout/backup_and_restore_fragment_upload_qr.xml
+++ b/kin-backup-and-restore/kin-backup-and-restore/src/main/res/layout/backup_and_restore_fragment_upload_qr.xml
@@ -5,16 +5,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingRight="@dimen/backupAndRestore_screen_left_right_padding"
-    android:paddingLeft="@dimen/backupAndRestore_screen_left_right_padding"
+    android:paddingRight="@dimen/backup_and_restore_screen_left_right_padding"
+    android:paddingLeft="@dimen/backup_and_restore_screen_left_right_padding"
     android:background="@android:color/white">
 
     <ImageView
         android:id="@+id/qr_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/backupAndRestore_margin_large"
-        android:src="@drawable/qr"
+        android:layout_marginTop="@dimen/backup_and_restore_margin_large"
+        app:srcCompat="@drawable/qr"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
@@ -24,9 +24,9 @@
         style="@style/BackupAndRestoreTitleLargeBold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/backupAndRestore_margin_large"
-        android:layout_marginLeft="@dimen/backupAndRestore_margin_extra_large"
-        android:layout_marginRight="@dimen/backupAndRestore_margin_extra_large"
+        android:layout_marginTop="@dimen/backup_and_restore_margin_large"
+        android:layout_marginLeft="@dimen/backup_and_restore_margin_extra_large"
+        android:layout_marginRight="@dimen/backup_and_restore_margin_extra_large"
         android:gravity="center_horizontal"
         android:text="@string/backup_and_restore_upload_qr_title"
         app:layout_constraintEnd_toEndOf="parent"
@@ -37,9 +37,9 @@
         style="@style/BackupAndRestoreTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/backupAndRestore_margin_medium"
-        android:layout_marginLeft="@dimen/backupAndRestore_margin_extra_large"
-        android:layout_marginRight="@dimen/backupAndRestore_margin_extra_large"
+        android:layout_marginTop="@dimen/backup_and_restore_margin_medium"
+        android:layout_marginLeft="@dimen/backup_and_restore_margin_extra_large"
+        android:layout_marginRight="@dimen/backup_and_restore_margin_extra_large"
         android:gravity="center_horizontal"
         android:text="@string/backup_and_restore_upload_qr_description"
         app:layout_constraintEnd_toEndOf="parent"
@@ -56,8 +56,8 @@
     <View
         android:id="@+id/upload_btn_frame"
         android:layout_width="0dp"
-        android:layout_height="@dimen/backupAndRestore_btn_height"
-        android:layout_marginBottom="@dimen/backupAndRestore_btn_margin_bottom"
+        android:layout_height="@dimen/backup_and_restore_btn_height"
+        android:layout_marginBottom="@dimen/backup_and_restore_btn_margin_bottom"
         android:background="@drawable/backup_and_restore_btn_state_list"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -81,7 +81,7 @@
         style="@style/BackupAndRestoreButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/arrow_upload"
+        app:srcCompat="@drawable/arrow_upload"
         android:layout_marginRight="25dp"
         app:layout_constraintBottom_toBottomOf="@id/upload_btn_frame"
         app:layout_constraintEnd_toEndOf="@id/upload_btn_frame"
