--- a/kin-backup-and-restore/kin-backup-and-restore/src/main/res/layout/backup_and_restore_fragment_backup_create_password.xml
+++ b/kin-backup-and-restore/kin-backup-and-restore/src/main/res/layout/backup_and_restore_fragment_backup_create_password.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingRight="@dimen/backupAndRestore_screen_left_right_padding"
-    android:paddingLeft="@dimen/backupAndRestore_screen_left_right_padding"
+    android:paddingRight="@dimen/backup_and_restore_screen_left_right_padding"
+    android:paddingLeft="@dimen/backup_and_restore_screen_left_right_padding"
     android:background="@android:color/white">
 
     <TextView
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:gravity="center_horizontal"
-        android:lineSpacingExtra="@dimen/backupAndRestore_line_spacing_large"
+        android:lineSpacingExtra="@dimen/backup_and_restore_line_spacing_large"
         android:text="@string/backup_and_restore_create_password_description_part_a"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,8 +27,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="9dp"
         android:gravity="center_horizontal"
-        android:textColor="@color/backupAndRestore_gray"
-        android:lineSpacingExtra="@dimen/backupAndRestore_line_spacing_large"
+        android:textColor="@color/backup_and_restore_gray"
+        android:lineSpacingExtra="@dimen/backup_and_restore_line_spacing_large"
         android:text="@string/backup_and_restore_create_password_description_part_b"
         app:layout_constraintTop_toBottomOf="@id/password_description_part_a"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,7 +38,7 @@
         android:id="@+id/enter_pass_edittext"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/backupAndRestore_margin_large"
+        android:layout_marginTop="@dimen/backup_and_restore_margin_large"
         app:backup_and_restore_hint="@string/backup_and_restore_enter_password"
         app:backup_and_restore_show_reveal_icon="true"
         app:layout_constraintEnd_toEndOf="parent"
@@ -49,7 +49,7 @@
         android:id="@+id/confirm_pass_edittext"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/backupAndRestore_margin_medium"
+        android:layout_marginTop="@dimen/backup_and_restore_margin_medium"
         app:backup_and_restore_hint="@string/backup_and_restore_confirm_password"
         app:backup_and_restore_show_reveal_icon="true"
         app:layout_constraintEnd_toEndOf="parent"
@@ -61,17 +61,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:textColorHighlight="@color/backupAndRestore_purple_blue"
+        android:textColorHighlight="@color/backup_and_restore_purple_blue"
         android:theme="@style/BackupAndRestoreCheckBox"
         app:layout_constraintStart_toStartOf="@id/confirm_pass_edittext"
-        app:layout_constraintTop_toBottomOf="@id/confirm_pass_edittext"/>
+        app:layout_constraintTop_toBottomOf="@id/confirm_pass_edittext"
+        />
 
     <TextView
         android:id="@+id/understand_description"
         style="@style/BackupAndRestoreTitleSmall"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:lineSpacingExtra="@dimen/backupAndRestore_line_spacing_small"
+        android:lineSpacingExtra="@dimen/backup_and_restore_line_spacing_small"
         android:layout_marginLeft="7dp"
         android:text="@string/backup_and_restore_i_understand_password_description"
         app:layout_constraintLeft_toRightOf="@id/understand_checkbox"
@@ -82,8 +83,8 @@
         android:id="@+id/next_button"
         style="@style/BackupAndRestoreButton"
         android:layout_width="0dp"
-        android:layout_height="@dimen/backupAndRestore_btn_height"
-        android:layout_marginBottom="@dimen/backupAndRestore_btn_margin_bottom"
+        android:layout_height="@dimen/backup_and_restore_btn_height"
+        android:layout_marginBottom="@dimen/backup_and_restore_btn_margin_bottom"
         android:background="@drawable/backup_and_restore_btn_state_list"
         android:enabled="false"
         android:text="@string/backup_and_restore_next"
