--- a/kin-backup-and-restore/kin-backup-and-restore/src/main/res/layout/backup_and_restore_fragment_well_done_backup.xml
+++ b/kin-backup-and-restore/kin-backup-and-restore/src/main/res/layout/backup_and_restore_fragment_well_done_backup.xml
@@ -3,16 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/backupAndRestore_margin_extra_large"
-    android:paddingRight="@dimen/backupAndRestore_margin_extra_large"
+    android:paddingLeft="@dimen/backup_and_restore_margin_extra_large"
+    android:paddingRight="@dimen/backup_and_restore_margin_extra_large"
     android:background="@android:color/white">
 
     <ImageView
         android:id="@+id/safe_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/backupAndRestore_margin_large"
-        android:src="@drawable/safe"
+        android:layout_marginTop="@dimen/backup_and_restore_margin_large"
+        app:srcCompat="@drawable/safe"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
@@ -22,7 +22,7 @@
         style="@style/BackupAndRestoreTitleLargeBold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/backupAndRestore_margin_large"
+        android:layout_marginTop="@dimen/backup_and_restore_margin_large"
         android:text="@string/backup_and_restore_well_your_kin_is_safe_title"
         android:gravity="center_horizontal"
         app:layout_constraintEnd_toEndOf="parent"
@@ -34,10 +34,10 @@
         style="@style/BackupAndRestoreTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/backupAndRestore_description_margin"
+        android:layout_marginTop="@dimen/backup_and_restore_description_margin"
         android:text="@string/backup_and_restore_well_your_kin_is_safe_description"
         android:gravity="center_horizontal"
-        android:lineSpacingExtra="@dimen/backupAndRestore_line_spacing_medium"
+        android:lineSpacingExtra="@dimen/backup_and_restore_line_spacing_medium"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/save_qr_tile"/>
@@ -47,11 +47,11 @@
         style="@style/BackupAndRestoreTitleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/backupAndRestore_margin_large"
-        android:lineSpacingExtra="@dimen/backupAndRestore_line_spacing_medium"
+        android:layout_marginTop="@dimen/backup_and_restore_margin_large"
+        android:lineSpacingExtra="@dimen/backup_and_restore_line_spacing_medium"
         android:text="@string/backup_and_restore_save_password_and_keep_your_qr_handy"
         android:gravity="center_horizontal"
-        android:textColor="@color/backupAndRestore_red"
+        android:textColor="@color/backup_and_restore_red"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/save_qr_description"/>
