--- a/kin-backup-and-restore/kin-backup-and-restore/src/main/res/values/colors.xml
+++ b/kin-backup-and-restore/kin-backup-and-restore/src/main/res/values/colors.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <color name="backupAndRestore_red">#db497b</color>
-    <color name="backupAndRestore_gray">#a6a6a6</color>
-    <color name="backupAndRestore_dialog_message_gray">#6f6f6f</color>
-    <color name="backupAndRestore_black">#1f1f1f</color>
-    <color name="backupAndRestore_purple_blue">#6f41e8</color>
-    <color name="backupAndRestore_disabled_button">#e7e7e7</color>
+    <color name="backup_and_restore_red">#db497b</color>
+    <color name="backup_and_restore_gray">#a6a6a6</color>
+    <color name="backup_and_restore_dialog_message_gray">#6f6f6f</color>
+    <color name="backup_and_restore_black">#1f1f1f</color>
+    <color name="backup_and_restore_purple_blue">#6f41e8</color>
+    <color name="backup_and_restore_disabled_button">#e7e7e7</color>
 
 </resources>
