--- a/kin-backup-and-restore/kin-backup-and-restore-ui-tests/src/main/res/layout/activity_backup_and_restore_dummy_test.xml
+++ b/kin-backup-and-restore/kin-backup-and-restore-ui-tests/src/main/res/layout/activity_backup_and_restore_dummy_test.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -110,4 +110,4 @@
         app:layout_constraintVertical_chainStyle="packed"
         android:text="@string/restore_account"/>
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
