--- a/kin-sdk/kin-sdk-sample/src/main/res/layout/wallet_activity.xml
+++ b/kin-sdk/kin-sdk-sample/src/main/res/layout/wallet_activity.xml
@@ -68,7 +68,7 @@
                 android:layout_toRightOf="@id/get_balance_txt"
                 android:visibility="gone"
                 tools:visibility="visible"/>
-            <android.support.v7.widget.SwitchCompat
+            <androidx.appcompat.widget.SwitchCompat
                 android:id="@+id/auto_refresh_switch"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
