--- a/kin-backup-and-restore/kin-backup-and-restore-sample/src/main/res/layout/activity_backup_and_restore.xml
+++ b/kin-backup-and-restore/kin-backup-and-restore-sample/src/main/res/layout/activity_backup_and_restore.xml
@@ -5,84 +5,84 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="30dp"
-    android:layout_marginRight="30dp"
+    android:layout_marginLeft="@dimen/content_margin_sides"
+    android:layout_marginRight="@dimen/content_margin_sides"
     tools:context=".BackupAndRestoreActivity">
 
     <TextView
         android:id="@+id/current_account_details_label"
+        android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_top_large"
         android:text="@string/current_account_details_label"
-        android:textSize="26sp"
-        android:textStyle="bold"
-        android:layout_marginTop="50dp"
+        android:textSize="@dimen/text_title"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
         android:id="@+id/balance_label"
+        android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_top_medium"
         android:text="@string/balance_label"
-        android:textSize="22sp"
-        android:textStyle="bold"
-        android:layout_marginTop="30dp"
-        app:layout_constraintTop_toBottomOf="@+id/current_account_details_label"
-        app:layout_constraintLeft_toLeftOf="parent"/>
+        android:textSize="@dimen/text_label"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/current_account_details_label"/>
 
     <TextView
         android:id="@+id/balance_value"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        tools:text="1000 KIN"
-        android:textSize="22sp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="@dimen/margin_top_small"
+        android:textSize="@dimen/text_content"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/balance_label"
-        app:layout_constraintLeft_toLeftOf="parent"/>
+        tools:text="1000 KIN"/>
 
     <ProgressBar
         android:id="@+id/balance_value_progress"
         android:layout_width="@dimen/progress_size"
         android:layout_height="@dimen/progress_size"
-        app:layout_constraintLeft_toRightOf="@+id/balance_label"
-        app:layout_constraintTop_toTopOf="@+id/balance_label"
-        app:layout_constraintBottom_toBottomOf="@+id/balance_label"
         android:layout_marginLeft="10dp"
         android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@+id/balance_label"
+        app:layout_constraintLeft_toRightOf="@+id/balance_label"
+        app:layout_constraintTop_toTopOf="@+id/balance_label"
         tools:visibility="visible"/>
 
     <TextView
         android:id="@+id/public_address_label"
+        android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/public_address_label"
-        android:textSize="22sp"
-        android:textStyle="bold"
         android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/balance_value"
-        app:layout_constraintLeft_toLeftOf="parent"/>
+        android:text="@string/public_address_label"
+        android:textSize="@dimen/text_label"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/balance_value"/>
 
     <TextView
         android:id="@+id/public_address_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="ABCDEFGHIJKLMNOPQRSTUVWXYZ"
-        android:textSize="22sp"
         android:layout_marginTop="5dp"
+        android:textSize="@dimen/text_content"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/public_address_label"
-        app:layout_constraintLeft_toLeftOf="parent"/>
+        tools:text="ABCDEFGHIJKLMNOPQRSTUVWXYZ"/>
 
     <ProgressBar
         android:id="@+id/public_address_value_progress"
         android:layout_width="@dimen/progress_size"
         android:layout_height="@dimen/progress_size"
-        app:layout_constraintLeft_toRightOf="@+id/public_address_label"
-        app:layout_constraintTop_toTopOf="@+id/public_address_label"
-        app:layout_constraintBottom_toBottomOf="@+id/public_address_label"
         android:layout_marginLeft="10dp"
         android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@+id/public_address_label"
+        app:layout_constraintLeft_toRightOf="@+id/public_address_label"
+        app:layout_constraintTop_toTopOf="@+id/public_address_label"
         tools:visibility="visible"/>
 
     <Button
@@ -90,46 +90,46 @@
         style="@style/BackupAndRestoreButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="22sp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/public_address_value"
+        android:text="@string/create_new_account"
+        android:textSize="@dimen/text_button"
+        app:layout_constraintBottom_toTopOf="@+id/backup_current_account"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/backup_current_account"
-        app:layout_constraintVertical_chainStyle="packed"
-        android:text="@string/create_new_account"/>
+        app:layout_constraintTop_toBottomOf="@+id/public_address_value"
+        app:layout_constraintVertical_chainStyle="packed"/>
 
     <Button
         android:id="@+id/backup_current_account"
         style="@style/BackupAndRestoreButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="22sp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="@dimen/margin_top_medium"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/create_new_account"
+        android:text="@string/backup_current_account"
+        android:textSize="@dimen/text_button"
+        app:layout_constraintBottom_toTopOf="@+id/restore_account"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/restore_account"
-        app:layout_constraintVertical_chainStyle="packed"
-        android:text="@string/backup_current_account"/>
+        app:layout_constraintTop_toBottomOf="@+id/create_new_account"
+        app:layout_constraintVertical_chainStyle="packed"/>
 
     <Button
         android:id="@+id/restore_account"
         style="@style/BackupAndRestoreButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="22sp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="@dimen/margin_top_medium"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/backup_current_account"
+        android:text="@string/restore_account"
+        android:textSize="@dimen/text_button"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_chainStyle="packed"
-        android:text="@string/restore_account"/>
+        app:layout_constraintTop_toBottomOf="@+id/backup_current_account"
+        app:layout_constraintVertical_chainStyle="packed"/>
 
 </android.support.constraint.ConstraintLayout>
