These should be TextUtils.

--- a/kin-sdk/kin-sdk-sample/src/main/res/xml/network_security_config.xml
+++ b/kin-sdk/kin-sdk-sample/src/main/res/xml/network_security_config.xml
@@ -3,4 +3,10 @@
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">34.239.111.38:3000</domain>
     </domain-config>
+    <debug-overrides>
+        <trust-anchors>
+            <!-- Trust user added CAs while debuggable only -->
+            <certificates src="user" />
+        </trust-anchors>
+    </debug-overrides>
 </network-security-config>
